--- a/diffus.ipynb
+++ b/diffus.ipynb
@@ -151,33 +151,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 161,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "tensor(0.1206, grad_fn=<MeanBackward1>)\n",
-      "tensor(-410.7986, grad_fn=<MeanBackward1>)\n",
-      "tensor(-2010.5153, grad_fn=<MeanBackward1>)\n",
-      "tensor(-3983.4812, grad_fn=<MeanBackward1>)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "dataset = circle_tensor.float()\n",
     "for t in range(2000):\n",
-    "    # Compute the loss.\n",
     "    loss = score_matching(model, dataset)\n",
-    "    # Before the backward pass, zero all of the network gradients\n",
     "    optimizer.zero_grad()\n",
-    "    # Backward pass: compute gradient of the loss with respect to parameters\n",
     "    loss.backward()\n",
-    "    # Calling the step function to update the parameters\n",
-    "    optimizer.step()\n",
-    "    if ((t % 500) == 0):\n",
-    "        print(loss)"
+    "    optimizer.step()"
    ]
   },
   {
